--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -10,13 +10,13 @@
     <div class="mob-login">
     </div>
     <div class="pc-login">
-      
+
     </div>
     <p class="tip-info g-tac"></p>
     <script type="text/html" id="tplIptlogin">
       <div class="ipt-login">
         <div class="login-top">
-          <img class="login-top-bg" src="../static/images/img_bg3.png">
+          <img class="login-top-bg" src="static/images/img_bg3.png">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
@@ -42,15 +42,15 @@
         <div class="input-main">
           <button class="btn">一键登录</button>
         </div>
-      </div>    
-    </script> 
+      </div>
+    </script>
     <script type="text/html" id="tplBottom">
       <div class="login-bottom">
         <img class="company-img" src="../static/images/img_text_phone.png">
         <img class="app-ads" src="{{ads.img}}">
-      </div>      
+      </div>
     </script>
-    <script type="text/html" id="tplPc"></script>   
+    <script type="text/html" id="tplPc"></script>
   </body>
   <!--script type="text/javascript" src="./static/zepto.min.js"></script>
   <script type="text/javascript" src="./static/template.js"></script-->
