--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -7,25 +7,22 @@
     <title>东莞无限</title>
   </head>
   <body>
-    <div class="mob-login">
-    </div>
-    <div class="pc-login">
-      
+    <div class="login">
     </div>
     <p class="tip-info g-tac"></p>
     <script type="text/html" id="tplIptlogin">
       <div class="ipt-login">
         <div class="login-top">
-          <img class="login-top-bg" src="../static/images/img_bg3.png">
+          <img class="login-top-bg" src="static/images/img_bg3.png">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
           <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="name"><img src="../static/images/loading_icon_phone.png"></label>
+            <label class="input-img g-fl" for="name"><img src="static/images/loading_icon_phone.png"></label>
             <input class="g-fr ipt-phone" id="name" type="text" placeholder="请输入手机号">
           </div>
           <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="code" ><img src="../static/images/loading_icon_key.png"></label>
+            <label class="input-img g-fl" for="code" ><img src="static/images/loading_icon_key.png"></label>
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
             <i class="query-code">输入验证码</i>
           </div>
@@ -36,7 +33,7 @@
     <script type="text/html" id="tplOnelogin">
       <div class="one-click">
         <div class="login-top">
-          <img class="login-top-bg" src="../static/images/img_bg4.png">
+          <img class="login-top-bg" src="static/images/img_bg4.png">
           <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
@@ -46,11 +43,32 @@
     </script> 
     <script type="text/html" id="tplBottom">
       <div class="login-bottom">
-        <img class="company-img" src="../static/images/img_text_phone.png">
+        <img class="company-img" src="static/images/img_text_phone.png">
         <img class="app-ads" src="{{ads.img}}">
       </div>      
     </script>
-    <script type="text/html" id="tplPc"></script>   
+
+    <script type="text/html" id="tplPc">
+      <div class="pc-container">
+        <img class="login-dglogo" src="static/images/pc_img_dglogo.png">
+        <p class="g-tac dgpc-text">欢迎使用东莞无限免费WiFi</p>
+      </div>
+    </script> 
+
+    <script type="text/html" id="tplIptpc">
+      <div class="input-main">
+        <div class="input-info g-clearfix">
+          <label class="input-img g-fl" for="name"><img src="static/images/loading_icon_phone.png"></label>
+          <input class="g-fr" id="name" type="text" placeholder="请输入手机号">
+        </div>
+        <div class="input-info g-clearfix">
+          <label class="input-img g-fl" for="pwd"><img src="static/images/loading_icon_key.png"></label>
+          <input class="g-fr" id="pwd" type="text" placeholder="请输入验证码">
+          <i class="query-code"></i>
+        </div>
+        <button class="btn">开启智慧城市之旅</button>
+      </div>
+    </script>  
   </body>
   <!--script type="text/javascript" src="./static/zepto.min.js"></script>
   <script type="text/javascript" src="./static/template.js"></script-->
