--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -64,6 +64,15 @@
           </div>
           <button class="btn pc-btn ">开启智慧城市之旅</button>
         </div>
+        <div class="qr-code">
+          <img src="static/images/pc_img_app.png">
+          <p class="g-tac">下载App</p>
+        </div>
+        <div class="qr-code wechat-code">
+          <img src="static/images/pc_img_wechat.png">
+          <p class="g-tac">关注微信</p>
+        </div>
+        <img class="pccompay-text" src="static/images/pc_img_text.png">
       </div>
     </script>
 
@@ -71,9 +80,18 @@
       <div class="pc-container">
         <div class="pc-login-main">
           <img class="pc-login-dglogo onepc-login-dglogo" src="static/images/pc_img_dglogo.png">
-          <p class="g-tac pc-dgpc-text pc-dgpc-text">欢迎使用东莞无限免费WiFi</p>
+          <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
           <button class="btn pc-btn onepc-btn">开启智慧城市之旅</button>
         </div>
+        <div class="qr-code">
+          <img src="static/images/pc_img_app.png">
+          <p class="g-tac">下载App</p>
+        </div>
+        <div class="qr-code wechat-code">
+          <img src="static/images/pc_img_wechat.png">
+          <p class="g-tac">关注微信</p>
+        </div>
+        <img class="pccompay-text" src="static/images/pc_img_text.png">
       </div>
     </script> 
   </body>
