--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -44,7 +44,7 @@
     <script type="text/html" id="tplBottom">
       <div class="login-bottom">
         <img class="company-img" src="static/images/img_text_phone.png">
-        <img class="app-ads" src="{{ads.img}}">
+        <img class="app-ads" src="{{img}}">
       </div>
     </script>
 
