--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
+    <link rel="stylesheet" type="text/css" href="static/index.css">
     <title>东莞无限</title>
   </head>
   <body>
@@ -24,7 +25,7 @@
           <div class="input-info g-clearfix">
             <label class="input-img g-fl" for="code" ><img src="static/images/loading_icon_key.png"></label>
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
-            <i class="query-code">输入验证码</i>
+            <i class="query-code">点击获取验证码</i>
           </div>
           <button class="btn">开启智慧城市之旅</button>
         </div>
@@ -60,7 +61,7 @@
           <div class="pc-input-info g-clearfix">
             <label class="pc-input-img g-fl" for="pwd"><img src="static/images/loading_icon_key.png"></label>
             <input class="g-fr ipt-code" id="pwd" type="text" placeholder="请输入验证码">
-            <i class="pc-query-code query-code">输入验证码</i>
+            <i class="query-code pc-query-code">点击获取验证码</i>
           </div>
           <button class="btn pc-btn ">开启智慧城市之旅</button>
         </div>
@@ -95,6 +96,9 @@
       </div>
     </script> 
   </body>
-  <!--script type="text/javascript" src="./static/zepto.min.js"></script>
-  <script type="text/javascript" src="./static/template.js"></script-->
+  <!--script type="text/javascript" src="static/zepto.min.js"></script-->
+  <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+  <script type="text/javascript" src="static/template.js"></script>
+  <script type="text/javascript" src="static/cgi.js"></script>
+  <script type="text/javascript" src="static/index.js"></script>
 </html>
