click touch bug

--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -27,7 +27,7 @@
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
             <i class="query-code">点击获取验证码</i>
           </div>
-          <button class="btn">开启智慧城市之旅</button>
+          <button class="btn mob-btn">开启智慧城市之旅</button>
         </div>
       </div>
     </script>
@@ -38,7 +38,7 @@
           <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
-          <button class="btn">一键登录</button>
+          <button class="btn mob-btn">一键登录</button>
         </div>
       </div>
     </script>
