--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -82,7 +82,7 @@
         <div class="pc-login-main">
           <img class="pc-login-dglogo onepc-login-dglogo" src="static/images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
-          <buttom class="btn pc-btn onepc-btn" id="btn">开启智慧城市之旅</button>
+          <button class="btn pc-btn onepc-btn" id="btn">一键登录</button>
         </div>
         <div class="qr-code">
           <img src="static/images/pc_img_app.png">
