http jquery bug

--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -97,7 +97,7 @@
     </script> 
   </body>
   <!--script type="text/javascript" src="static/zepto.min.js"></script-->
-  <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+  <script type="text/javascript" src="static/jquery.min.js"></script>
   <script type="text/javascript" src="static/template.js"></script>
   <script type="text/javascript" src="static/cgi.js"></script>
   <script type="text/javascript" src="static/index.js"></script>
