无痕浏览处理

--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="login">
+      login
     </div>
     <p class="tip-info g-tac"></p>
     <script type="text/html" id="tplIptlogin">
