--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -25,7 +25,7 @@
           <div class="input-info g-clearfix">
             <label class="input-img g-fl" for="code" ><img src="images/loading_icon_key.png"></label>
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
-            <i class="query-code">点击获取验证码</i>
+            <i class="query-code">获取验证码</i>
           </div>
           <button class="btn mob-btn">开启智慧城市之旅</button>
         </div>
@@ -61,7 +61,7 @@
           <div class="pc-input-info g-clearfix">
             <label class="pc-input-img g-fl" for="pwd"><img src="images/loading_icon_key.png"></label>
             <input class="g-fr ipt-code" id="pwd" type="text" placeholder="请输入验证码">
-            <i class="query-code pc-query-code">点击获取验证码</i>
+            <i class="query-code pc-query-code">获取验证码</i>
           </div>
           <button class="btn pc-btn" id="btn">开启智慧城市之旅</button>
         </div>
