login button style

--- a/vue2x/logintest/index.html
+++ b/vue2x/logintest/index.html
@@ -37,7 +37,7 @@
           <img class="login-top-bg" src="images/img_bg4.png">
           <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
         </div>
-        <div class="input-main">
+        <div class="input-main oneclick-ipt-main">
           <button class="btn mob-btn">一键登录</button>
         </div>
       </div>
