--- a/vue2x/portal/wifilink.html
+++ b/vue2x/portal/wifilink.html
@@ -11,4 +11,13 @@
     <!-- <script src="http://file.yunxingzh.com/js/vue.205.min.js"></script> -->
     <!-- built files will be auto injected -->
   </body>
+  <script type="text/javascript">
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?4d7f4413c92d88c3417c9e927e2d588d";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </html>
