--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -70,7 +70,7 @@
           <p class="g-tac">下载App</p>
         </div>
         <div class="qr-code wechat-code">
-          <img src="images/pc_img_wechat.png">
+          <img src="images/pc_img_wechat2.png">
           <p class="g-tac">关注微信</p>
         </div>
         <img class="pccompay-text" src="images/pc_img_text.png">
