--- a/vue2x/dgwifi/map.html
+++ b/vue2x/dgwifi/map.html
@@ -2,7 +2,7 @@
 <html>  
 <head>  
 <meta charset="utf-8"/>  
-<title>百度地图</title>  
+<title>WiFi地图</title>  
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no, email=no"> 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
