--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -27,7 +27,7 @@
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
             <i class="query-code">获取验证码</i>
           </div>
-          <button class="btn mob-btn">开启智慧城市之旅</button>
+          <a class="btn mob-btn" target="_blank" href="{{portalUrl}}">开启智慧城市之旅</a>
         </div>
       </div>
     </script>
@@ -38,7 +38,7 @@
           <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
-          <button class="btn mob-btn">一键登录</button>
+          <a class="btn mob-btn" target="_blank" href="portalUrl">一键登录</a>
         </div>
       </div>
     </script>
@@ -63,7 +63,7 @@
             <input class="g-fr ipt-code" id="pwd" type="text" placeholder="请输入验证码">
             <i class="query-code pc-query-code">获取验证码</i>
           </div>
-          <button class="btn pc-btn" id="btn">开启智慧城市之旅</button>
+          <a class="btn pc-btn" target="_blank">开启智慧城市之旅</a>
         </div>
         <div class="qr-code">
           <img src="images/pc_img_app.png">
@@ -82,7 +82,7 @@
         <div class="pc-login-main">
           <img class="pc-login-dglogo onepc-login-dglogo" src="images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
-          <button class="btn pc-btn onepc-btn" id="btn">一键登录</button>
+          <a class="btn pc-btn onepc-btn" target="_blank">一键登录</a>
         </div>
         <div class="qr-code">
           <img src="images/pc_img_app.png">
