--- a/vue2x/dgwifi/map.html
+++ b/vue2x/dgwifi/map.html
@@ -10,6 +10,6 @@
 </head>  
 <body>  
   <div id="mapp"></div>
-  <script src="http://yuntifile.oss-cn-shenzhen.aliyuncs.com/js/vue.205.min.js"></script>
+  <!--script src="http://yuntifile.oss-cn-shenzhen.aliyuncs.com/js/vue.205.min.js"></script-->
 </body>  
 </html>
