--- a/vue2x/dgwifi/error.html
+++ b/vue2x/dgwifi/error.html
@@ -8,6 +8,6 @@
 </head>  
 <body>  
   <div id="error"></div>
-  <script src="http://yuntifile.oss-cn-shenzhen.aliyuncs.com/js/vue.205.min.js"></script>
+  <!--script src="http://yuntifile.oss-cn-shenzhen.aliyuncs.com/js/vue.205.min.js"></script-->
 </body>  
 </html>
