--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -27,7 +27,7 @@
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
             <i class="query-code">获取验证码</i>
           </div>
-          <button class="btn">开启智慧城市之旅</button>
+          <button class="btn mob-btn">开启智慧城市之旅</button>
         </div>
       </div>
     </script>
