--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -4,100 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
-    <link rel="stylesheet" type="text/css" href="static/index.css">
     <title>东莞无限</title>
   </head>
   <body>
-    <div class="login">
-    </div>
-    <p class="tip-info g-tac"></p>
-    <script type="text/html" id="tplIptlogin">
-      <div class="ipt-login">
-        <div class="login-top">
-          <img class="login-top-bg" src="static/images/img_bg3.png">
-          <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
-        </div>
-        <div class="input-main">
-          <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="name"><img src="static/images/loading_icon_phone.png"></label>
-            <input class="g-fr ipt-phone" id="name" type="text" placeholder="请输入手机号">
-          </div>
-          <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="code" ><img src="static/images/loading_icon_key.png"></label>
-            <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
-            <i class="query-code">点击获取验证码</i>
-          </div>
-          <button class="btn mob-btn">开启智慧城市之旅</button>
-        </div>
-      </div>
-    </script>
-    <script type="text/html" id="tplOnelogin">
-      <div class="one-click">
-        <div class="login-top">
-          <img class="login-top-bg" src="static/images/img_bg4.png">
-          <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
-        </div>
-        <div class="input-main">
-          <button class="btn mob-btn">一键登录</button>
-        </div>
-      </div>
-    </script>
-    <script type="text/html" id="tplBottom">
-      <div class="login-bottom">
-        <img class="company-img" src="static/images/img_text_phone.png">
-        <img class="app-ads" src="{{img}}">
-      </div>
-    </script>
-
-    <script type="text/html" id="tplPc">
-      <div class="pc-container">
-        <div class="pc-login-main">
-          <img class="pc-login-dglogo" src="static/images/pc_img_dglogo.png">
-          <p class="g-tac pc-dgpc-text">欢迎使用东莞无限免费WiFi</p>
-          <div class="pc-input-info g-clearfix">
-            <label class="pc-input-img g-fl" for="name"><img src="static/images/loading_icon_phone.png"></label>
-            <input class="g-fr ipt-phone" id="name" type="text" placeholder="请输入手机号">
-          </div>
-          <div class="pc-input-info g-clearfix">
-            <label class="pc-input-img g-fl" for="pwd"><img src="static/images/loading_icon_key.png"></label>
-            <input class="g-fr ipt-code" id="pwd" type="text" placeholder="请输入验证码">
-            <i class="query-code pc-query-code">点击获取验证码</i>
-          </div>
-          <button class="btn pc-btn" id="btn">开启智慧城市之旅</button>
-        </div>
-        <div class="qr-code">
-          <img src="static/images/pc_img_app.png">
-          <p class="g-tac">下载App</p>
-        </div>
-        <div class="qr-code wechat-code">
-          <img src="static/images/pc_img_wechat.png">
-          <p class="g-tac">关注微信</p>
-        </div>
-        <img class="pccompay-text" src="static/images/pc_img_text.png">
-      </div>
-    </script>
-
-    <script type="text/html" id="tplPcone">
-      <div class="pc-container">
-        <div class="pc-login-main">
-          <img class="pc-login-dglogo onepc-login-dglogo" src="static/images/pc_img_dglogo.png">
-          <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
-          <button class="btn pc-btn onepc-btn" id="btn">一键登录</button>
-        </div>
-        <div class="qr-code">
-          <img src="static/images/pc_img_app.png">
-          <p class="g-tac">下载App</p>
-        </div>
-        <div class="qr-code wechat-code">
-          <img src="static/images/pc_img_wechat.png">
-          <p class="g-tac">关注微信</p>
-        </div>
-        <img class="pccompay-text" src="static/images/pc_img_text.png">
-      </div>
-    </script> 
+    <div id="app"></div>
+    <!-- <script src="http://file.yunxingzh.com/js/vue.205.min.js"></script> -->
+    <!-- built files will be auto injected -->
   </body>
-  <script type="text/javascript" src="static/jquery.min.js"></script>
-  <script type="text/javascript" src="static/template.js"></script>
-  <script type="text/javascript" src="static/cgi.js"></script>
-  <script type="text/javascript" src="static/index.js"></script>
+  <script type="text/javascript">
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?4d7f4413c92d88c3417c9e927e2d588d";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </html>
