--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -9,10 +9,51 @@
   </head>
   <body>
     <div class="login">
+      <!--div class="login-top">
+        <img src="images/mob_img_bg.png">
+        <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
+      </div-->
+      <!--div class="login-top">
+        <video src="images/movie.mp4" autoplay="autoplay" loop="loop"></video>
+      </div-->
+      <!--div class="login-bottom">
+        <div class="input-main">
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="name"><img src="images/loading_icon_phone.png"></label>
+            <input class="ipt-phone mob-ipt-phone  g-fr" id="name" type="text" placeholder="请输入手机号">
+            <i class="query-code mob-query-code">获取验证码</i>
+          </div>
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="code" ><img src="images/loading_icon_key.png"></label>
+            <input class="ipt-code mob-ipt-phone g-fr" id="code" type="text" placeholder="请输入验证码"> 
+            <button class="btn click-btn">一键登录</button>        
+          </div>
+        </div>
+        <p class="login-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
+      </div--> 
+      <!--div class="login-bottom">
+        <div class="input-main">
+          <button class="btn mob-btn">一键登录</button>
+        </div>
+        <p class="login-bottom-company onelogin-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
+      </div--> 
     </div>
     <p class="tip-info g-tac"></p>
+    <!--tplImgtop-->
+    <script type="text/html" id="tplImgtop">
+      <div class="login-top">
+        <img src="images/mob_img_bg.png">
+      </div>
+    </script>
+    <!--tplVideotop-->
+     <script type="text/html" id="tplVideotop">
+      <div class="login-top">
+        <video src="images/movie.mp4" autoplay="autoplay" loop="loop" width="100%" height="100%"></video>
+      </div>
+    </script>
+
     <script type="text/html" id="tplIptlogin">
-      <div class="ipt-login">
+      <!--div class="ipt-login">
         <div class="login-top">
           <img class="login-top-bg" src="images/img_bg3.png">
         </div>
@@ -29,10 +70,26 @@
           </div>
           <button class="btn mob-btn">开启智慧城市之旅</button>
         </div>
+      </div-->
+      <div class="login-bottom">
+        <div class="input-main">
+          <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="name"><img src="images/loading_icon_phone.png"></label>
+            <input class="ipt-phone mob-ipt-phone  g-fr" id="name" type="text" placeholder="请输入手机号">
+            <i class="query-code mob-query-code">获取验证码</i>
+          </div>
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="code" ><img src="images/loading_icon_key.png"></label>
+            <input class="ipt-code mob-ipt-phone g-fr" id="code" type="text" placeholder="请输入验证码"> 
+            <button class="btn mob-btn click-btn">一键登录</button>        
+          </div>
+        </div>
+        <p class="login-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
       </div>
     </script>
     <script type="text/html" id="tplOnelogin">
-      <div class="one-click">
+      <!--div class="one-click">
         <div class="login-top">
           <img class="login-top-bg" src="images/img_bg4.png">
           <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
@@ -40,14 +97,22 @@
         <div class="input-main">
           <button class="btn mob-btn">一键登录</button>
         </div>
+      </div-->
+      <div class="login-bottom">
+        <div class="input-main">
+          <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
+          <button class="btn mob-btn">一键登录</button>
+        </div>
+        <p class="login-bottom-company onelogin-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
       </div>
     </script>
-    <script type="text/html" id="tplBottom">
+
+    <!--script type="text/html" id="tplBottom">
       <div class="login-bottom">
         <img class="company-img" src="images/img_text_phone.png">
         <img class="app-ads" src="{{img}}">
       </div>
-    </script>
+    </script-->
 
     <script type="text/html" id="tplPc">
       <div class="pc-container">
