--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -14,7 +14,7 @@
         <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
       </div-->
       <!--div class="login-top">
-        <video src="images/movie.mp4" autoplay="autoplay" loop="loop"></video>
+        <video src="images/movie.mp4" autoplay loop muted playsinline></video>
       </div-->
       <!--div class="login-bottom">
         <div class="input-main">
