--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -48,7 +48,7 @@
     <!--tplVideotop-->
      <script type="text/html" id="tplVideotop">
       <div class="login-top">
-        <video src="images/movie.mp4" poster="images/pob_img_bg.png" autoplay loop muted playsinline></video>
+        <video src="images/movie.mp4" poster="images/mob_img_bg" autoplay loop muted playsinline width="100%" height="100%"></video>
       </div>
     </script>
 
