--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -72,7 +72,6 @@
         </div>
       </div-->
       <div class="login-bottom">
-        <a href="" class="a-simulate"></a>
         <div class="input-main">
           <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
           <div class="input-info g-clearfix">
@@ -100,7 +99,6 @@
         </div>
       </div-->
       <div class="login-bottom">
-        <a href="" class="a-simulate" target="_blank"></a>
         <div class="input-main">
           <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
           <button class="btn mob-btn">一键登录</button>
@@ -119,7 +117,6 @@
     <script type="text/html" id="tplPc">
       <div class="pc-container">
         <div class="pc-login-main">
-          <a href="" class="a-simulate"></a>
           <img class="pc-login-dglogo" src="images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text">欢迎使用东莞无限免费WiFi</p>
           <div class="pc-input-info g-clearfix">
@@ -148,7 +145,6 @@
     <script type="text/html" id="tplPhone">
       <div class="pc-container">
         <div class="pc-login-main">
-          <a href="" class="a-simulate"></a>
           <img class="pc-login-dglogo onepc-login-dglogo" src="images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
           <button class="btn pc-btn onepc-btn">一键登录</button>
@@ -167,6 +163,7 @@
   </body>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
-  <script type="text/javascript" src="js/iphone-inline-video.min.js"></script>
+  <script type="text/javascript" src="js/iphone-inline-video.min.js"></script> 
+  <script type="text/javascript" src="js/cgi.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </html>
