--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -44,7 +44,7 @@
     </script>
     <script type="text/html" id="tplBottom">
       <div class="login-bottom">
-        <img class="company-img" src="images/img_text_phone.png">
+        <img class="company-img" src="images/img_text_phone2.png">
         <img class="app-ads" src="{{img}}">
       </div>
     </script>
@@ -73,7 +73,7 @@
           <img src="images/pc_img_wechat2.png">
           <p class="g-tac">关注微信</p>
         </div>
-        <img class="pccompay-text" src="images/pc_img_text.png">
+        <img class="pccompay-text" src="images/pc_img_text2.png">
       </div>
     </script>
 
@@ -92,7 +92,7 @@
           <img src="images/pc_img_wechat2.png">
           <p class="g-tac">关注微信</p>
         </div>
-        <img class="pccompay-text" src="images/pc_img_text.png">
+        <img class="pccompay-text" src="images/pc_img_text2.png">
       </div>
     </script> 
   </body>
