--- a/vue2x/dgwifi/welfare.html
+++ b/vue2x/dgwifi/welfare.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no, email=no"> 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script src="http://wx.youcaitv.cn/get_jsapi_sign" charset="utf-8"></script>
+<script src="http://wx.yunxingzh.com/get_jsapi_sign" charset="utf-8"></script>
 </head>  
 <body>  
   <div id="welfare"></div>
