--- a/home/download.html
+++ b/home/download.html
@@ -41,14 +41,14 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <!--div class="container">
       <img class="con-bg" src="http://img.yunxingzh.com/847b6e24-84d1-40be-a9e8-1ad20c8fd84f.png" alt="">
       <a class="con-href" href="http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless">
         <img src="http://img.yunxingzh.com/487c1cd5-2add-4a59-8e04-88509a204ebb.png">
       </a>
-    </div>
+    </div-->
     <script>
-
+      location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless';
     </script>
   </body>
 </html>
