--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -15,7 +15,7 @@
     <!--tplImgtop-->
     <script type="text/html" id="tplImgtop">
       <div class="login-top">
-        <img src="images/mob_img_bg.png">
+        <img src="images/img_bg_ad.png">
       </div>
     </script>
     <!--tplVideotop-->
