--- a/vue2x/wx/h5/gotowifi.html
+++ b/vue2x/wx/h5/gotowifi.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
-    <title>东莞无限</title>
+    <title></title>
   </head>
   <body>
     <div id="app"></div>
@@ -17,7 +17,5 @@
         console.log(resp);
       })
     </script>
-    <!-- <script src="http://file.yunxingzh.com/js/vue.205.min.js"></script> -->
-    <!-- built files will be auto injected -->
   </body>
 </html>
