--- a/vue2x/wx/h5/gotowifi.html
+++ b/vue2x/wx/h5/gotowifi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<iDOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -11,10 +11,11 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/cgi.js"></script>
     <script type="text/javascript">
-      var openid = CGI.query().openid;
+      var openid = CGI.query().open;
       var url = 'http://www.baidu.com/?wx_code_com=gh_473af7c4942b&wx_code_cust='+openid;
+      alert(url);
       CGI.get(url,{},function(resp) {
-        console.log(resp);
+        alert(resp);
       })
     </script>
   </body>
