--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -13,19 +13,13 @@
     </div>
     <p class="tip-info g-tac"></p>
     <!--tplImgtop-->
-    <script type="text/html" id="tplImgtop">
+    <!--script type="text/html" id="tplImgtop">
       <div class="login-top">
         <img src="images/img_bg_ad.png">
       </div>
-    </script>
-    <!--tplVideotop-->
-     <script type="text/html" id="tplVideotop">
-      <div class="login-top">
-        <video src="images/movie.mp4" poster="images/mob_img_bg.png" autoplay loop muted playsinline width="100%" height="100%"></video>
-      </div>
-    </script>
+    </script-->
 
-    <script type="text/html" id="tplIptlogin">
+    <!--script type="text/html" id="tplIptlogin">
        <div class="login-bottom">
         <div class="input-main">
           <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
@@ -42,9 +36,31 @@
         </div>
         <p class="login-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
       </div>
+    </script-->
+
+    <script type="text/html" id="tplIptlogin">
+      <div class="ipt-login">
+        <div class="login-top">
+          <img class="login-top-bg" src="images/img_bg3.png">
+        </div>
+        <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
+        <div class="input-main">
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="name"><img src="images/loading_icon_phone.png"></label>
+            <input class="g-fr ipt-phone" id="name" type="text" placeholder="请输入手机号">
+          </div>
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="code" ><img src="images/loading_icon_key.png"></label>
+            <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
+            <i class="query-code">获取验证码</i>
+          </div>
+          <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
+        </div>
+      </div>
     </script>
+
     <script type="text/html" id="tplOnelogin">
-      <!--div class="one-click">
+      <div class="one-click">
         <div class="login-top">
           <img class="login-top-bg" src="images/img_bg4.png">
           <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
@@ -52,22 +68,21 @@
         <div class="input-main">
           <button class="btn mob-btn">一键登录</button>
         </div>
-      </div-->
-      <div class="login-bottom">
+      </div>
+      <!--div class="login-bottom">
         <div class="input-main">
           <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
           <button class="btn mob-btn">一键登录</button>
         </div>
         <p class="login-bottom-company onelogin-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
-      </div>
+      </div-->
     </script>
 
-    <!--script type="text/html" id="tplBottom">
+    <script type="text/html" id="tplBottom">
       <div class="login-bottom">
-        <img class="company-img" src="images/img_text_phone.png">
-        <img class="app-ads" src="{{img}}">
+        <img class="company-img" src="images/img_text_phone3.png">
       </div>
-    </script-->
+    </script>
 
     <script type="text/html" id="tplPc">
       <div class="pc-container">
