--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -63,7 +63,7 @@
       <div class="one-click">
         <div class="login-top">
           <img class="login-top-bg" src="images/img_bg4.png">
-          <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
+          <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
           <button class="btn mob-btn">一键登录</button>
