--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -12,36 +12,10 @@
 
     </div>
     <p class="tip-info g-tac"></p>
-    <!--tplImgtop-->
-    <!--script type="text/html" id="tplImgtop">
-      <div class="login-top">
-        <img src="images/img_bg_ad.png">
-      </div>
-    </script-->
-
-    <!--script type="text/html" id="tplIptlogin">
-       <div class="login-bottom">
-        <div class="input-main">
-          <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
-          <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="name"><img src="images/loading_icon_phone.png"></label>
-            <input class="ipt-phone mob-ipt-phone  g-fr" id="name" type="text" placeholder="请输入手机号">
-            <i class="query-code mob-query-code">获取验证码</i>
-          </div>
-          <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="code" ><img src="images/loading_icon_key.png"></label>
-            <input class="ipt-code mob-ipt-phone g-fr" id="code" type="text" placeholder="请输入验证码"> 
-            <button class="btn mob-btn click-btn">一键登录</button>        
-          </div>
-        </div>
-        <p class="login-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
-      </div>
-    </script-->
-
     <script type="text/html" id="tplIptlogin">
       <div class="ipt-login">
         <div class="login-top">
-          <img class="login-top-bg" src="images/img_bg3.png">
+          <img class="login-top-bg" src="images/img_loginbg.png">
         </div>
         <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         <div class="input-main">
@@ -55,6 +29,7 @@
             <i class="query-code">获取验证码</i>
           </div>
           <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
+          <button class="btn wx-btn">一键微信连WiFi</button>
         </div>
       </div>
     </script>
@@ -62,11 +37,12 @@
     <script type="text/html" id="tplOnelogin">
       <div class="one-click">
         <div class="login-top">
-          <img class="login-top-bg" src="images/img_bg4.png">
+          <img class="login-top-bg" src="images/img_loginbg.png">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
           <button class="btn mob-btn">一键登录</button>
+          <button class="btn wx-btn">一键微信连WiFi</button>
         </div>
       </div>
       <!--div class="login-bottom">
@@ -133,7 +109,7 @@
   </body>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
-  <script type="text/javascript" src="js/iphone-inline-video.min.js"></script> 
+  <script type="text/javascript" src="https://wifi.weixin.qq.com/resources/js/wechatticket/wechatutil.js" ></script>
   <script type="text/javascript" src="js/cgi.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </html>
