--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -45,13 +45,6 @@
           <button class="btn wx-btn">一键微信连WiFi</button>
         </div>
       </div>
-      <!--div class="login-bottom">
-        <div class="input-main">
-          <p class="top-text g-tac">欢迎使用东莞无限免费WiFi</p>
-          <button class="btn mob-btn">一键登录</button>
-        </div>
-        <p class="login-bottom-company onelogin-bottom-company">东莞智慧城市投资建设运营有限公司</p> 
-      </div-->
     </script>
 
     <script type="text/html" id="tplBottom">
@@ -110,6 +103,7 @@
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
   <script type="text/javascript" src="https://wifi.weixin.qq.com/resources/js/wechatticket/wechatutil.js" ></script>
+  <script type="text/javascript" src="js/md5.js"></script>
   <script type="text/javascript" src="js/cgi.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </html>
