--- a/vue2x/wx/h5/wxpostlogin.html
+++ b/vue2x/wx/h5/wxpostlogin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
-    <title></title>
+    <title>关注公众号</title>
     <style type="text/css">
       * {
         margin:  0;
