--- a/app/video.html
+++ b/app/video.html
@@ -105,13 +105,13 @@
     <p id="video-more" class="item-desc g-tac"></p>
     <p class="tip-info"></p>
     <script type="text/html" id="tplVideo">
-      {{each list as value i}}
-        <div class="video-list">
+      {{each infos as value i}}
+        <div class="video-list" data-idx={{i}}>
           <div class="video-inner">
-            <video src="list.dst" width="100%" height="auto" controls></video>
+            <video src={{value.dst}} width="100%" height="auto" controls></video>
             <div class="video-text g-clearfix">
               <p class="g-fl"><span class="video-text-source">{{value.source}}</span></p>
-              <p class="g-fr">{{value.click}}次播放</p>
+              <p class="g-fr click-num">{{value.click}}次播放</p>
             </div>
           </div>
           <p class="video-title g-ellipsis">{{value.title}}</p>
