--- a/vue2x/login/index.html
+++ b/vue2x/login/index.html
@@ -15,7 +15,7 @@
     <script type="text/html" id="tplIptlogin">
       <div class="ipt-login">
         <div class="login-top">
-          <img class="login-top-bg" src="{{img || 'images/img_loginbg.png'}}">
+          <img class="login-top-bg" src="{{img || 'images/img_top_bg.png'}}">
         </div>
         <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         <div class="input-main">
@@ -29,6 +29,7 @@
             <i class="query-code">获取验证码</i>
           </div>
           <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
+          <span>遇到问题</span>
         </div>
       </div>
     </script>
@@ -36,7 +37,7 @@
     <script type="text/html" id="tplOnelogin">
       <div class="one-click">
         <div class="login-top">
-          <img class="login-top-bg" src="images/img_loginbg.png">
+          <img class="login-top-bg" src="{{img || images/img_top_bg.png}}">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
