--- a/vue2x/login/question.html
+++ b/vue2x/login/question.html
@@ -21,6 +21,7 @@
       <input class="ipt-contact" type="text" placeholder="请输入您的手机或QQ号码">
       <button class="btn">提交问题</button>
     </div>
+    <p class="tip-info g-tac"></p>
   </body>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
