--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -29,7 +29,7 @@
             <i class="query-code">获取验证码</i>
           </div>
           <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
-          <button class="btn wx-btn">一键微信连WiFi</button>
+          <!--button class="btn wx-btn">一键微信连WiFi</button-->
         </div>
       </div>
     </script>
@@ -41,7 +41,7 @@
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
-          <button class="btn mob-btn">一键登录</button>
+          <!--button class="btn mob-btn">一键登录</button-->
           <button class="btn wx-btn">一键微信连WiFi</button>
         </div>
       </div>
@@ -102,7 +102,7 @@
   </body>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
-  <script type="text/javascript" src="https://wifi.weixin.qq.com/resources/js/wechatticket/wechatutil.js" ></script>
+  <script type="text/javascript" src="js/wechatutil.js" ></script>
   <script type="text/javascript" src="js/md5.js"></script>
   <script type="text/javascript" src="js/cgi.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
