--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -29,6 +29,7 @@
             <i class="query-code">获取验证码</i>
           </div>
           <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
+          <span class="has-ques">遇到问题?</span>
           <!--button class="btn wx-btn">一键微信连WiFi</button-->
         </div>
       </div>
@@ -37,12 +38,13 @@
     <script type="text/html" id="tplOnelogin">
       <div class="one-click">
         <div class="login-top">
-          <img class="login-top-bg" src="images/img_loginbg.png">
+          <img class="login-top-bg" src="{{img || 'images/img_loginbg.png'}}">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
           <!--button class="btn mob-btn">一键登录</button-->
-          <button class="btn wx-btn">一键微信连WiFi</button>
+          <button class="btn wx-btn">微信连WiFi</button>
+          <span class="has-ques">遇到问题?</span>
         </div>
       </div>
     </script>
@@ -68,6 +70,7 @@
             <i class="query-code pc-query-code">获取验证码</i>
           </div>
           <button class="btn pc-btn">开启智慧城市之旅</button>
+          <span class="has-ques">遇到问题</span>
         </div>
         <div class="qr-code">
           <img src="images/pc_img_app.png">
@@ -87,6 +90,7 @@
           <img class="pc-login-dglogo onepc-login-dglogo" src="images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
           <button class="btn pc-btn onepc-btn">一键登录</button>
+          <span class="has-ques">遇到问题?</span>
         </div>
         <div class="qr-code">
           <img src="images/pc_img_app.png">
