wifilink to index

--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -7,7 +7,7 @@
     <title>东莞无限</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="wifilink"></div>
     <!-- <script src="http://file.yunxingzh.com/js/vue.205.min.js"></script> -->
     <!-- built files will be auto injected -->
   </body>
