--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -70,7 +70,7 @@
             <i class="query-code pc-query-code">获取验证码</i>
           </div>
           <button class="btn pc-btn">开启智慧城市之旅</button>
-          <span class="has-ques">遇到问题</span>
+          <span class="has-ques pc-ques">遇到问题?</span>
         </div>
         <div class="qr-code">
           <img src="images/pc_img_app.png">
@@ -90,7 +90,7 @@
           <img class="pc-login-dglogo onepc-login-dglogo" src="images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
           <button class="btn pc-btn onepc-btn">一键登录</button>
-          <span class="has-ques">遇到问题?</span>
+          <span class="has-ques pc-ques">遇到问题?</span>
         </div>
         <div class="qr-code">
           <img src="images/pc_img_app.png">
