--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -69,7 +69,7 @@
             <input class="g-fr ipt-code" id="pwd" type="text" placeholder="请输入验证码">
             <i class="query-code pc-query-code">获取验证码</i>
           </div>
-          <button class="btn pc-btn">开启智慧城市之旅</button>
+          <button class="btn pc-btn pc-reg-btn">开启智慧城市之旅</button>
           <span class="has-ques pc-ques">遇到问题?</span>
         </div>
         <div class="qr-code">
@@ -89,7 +89,7 @@
         <div class="pc-login-main">
           <img class="pc-login-dglogo onepc-login-dglogo" src="images/pc_img_dglogo.png">
           <p class="g-tac pc-dgpc-text pcone-dgpc-text">欢迎使用东莞无限免费WiFi</p>
-          <button class="btn pc-btn onepc-btn">一键登录</button>
+          <button class="btn pc-btn pc-one-btn">一键登录</button>
           <span class="has-ques pc-ques">遇到问题?</span>
         </div>
         <div class="qr-code">
@@ -102,7 +102,7 @@
         </div>
         <img class="pccompay-text" src="images/pc_img_text.png">
       </div>
-    </script> 
+    </script>
   </body>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
