--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -103,6 +103,9 @@
         <img class="pccompay-text" src="images/pc_img_text.png">
       </div>
     </script>
+    <script type="text/html" id="apple">
+      <iframe src="http://captive.apple.com/" frameborder="0" height="0" width="0"></iframe>
+    </script>
   </body>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
