微信公众号连wifi

--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -30,7 +30,6 @@
           </div>
           <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
           <span class="has-ques g-fr">遇到问题?</span>
-          <!--button class="btn wx-btn">一键微信连WiFi</button-->
         </div>
       </div>
     </script>
@@ -42,8 +41,7 @@
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
-          <!--button class="btn mob-btn">一键登录</button-->
-          <button class="btn wx-btn">微信连WiFi</button>
+          <button class="btn wx-btn">东莞无限公众号连WiFi</button>
           <span class="has-ques g-fr">遇到问题?</span>
         </div>
       </div>
