--- a/app/test.html
+++ b/app/test.html
@@ -7,12 +7,16 @@
   <title>东莞无限</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>  
-  <script type="text/javascript" src="http://wx.yunxingzh.com/get_jsapi_sign"></script>
   <script type="text/javascript" src="css/wx.js"></script>
+  <script type="text/javascript" src="http://wx.yunxingzh.com/get_jsapi_sign"></script>
 </head>
 
 <body>
   <script type="text/javascript">
+  weixin.init(func());
+
+  function func() {
+    alert('fun');
     wx && wx.getLocation({
         type: 'wgs84', // 默认为wgs84的gps坐标，如果要返回直接给openLocation用的火星坐标，可传入'gcj02'
         success: function (res) {
@@ -29,6 +33,7 @@
           alert('complete'+res);
         }
     });
+  }
   </script>
 </body>
 
