--- a/vue2x/dgwifi/map.html
+++ b/vue2x/dgwifi/map.html
@@ -5,6 +5,8 @@
 <title>WiFi地图</title>  
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no, email=no"> 
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>  
+<script type="text/javascript" src="http://wx.yunxingzh.com/get_jsapi_sign"></script>
 </head>  
 <body>  
   <div id="mapp"></div>
