login weixin update

--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -37,11 +37,11 @@
     <script type="text/html" id="tplOnelogin">
       <div class="one-click">
         <div class="login-top">
-          <img class="login-top-bg" src="{{img || 'images/img_loginbg.png'}}">
+          <img class="login-top-bg" src="{{img || 'images/img_bg.png'}}">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main">
-          <button class="btn wx-btn">东莞无限公众号连WiFi</button>
+          <button class="btn wx-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi</button>
           <span class="has-ques g-fr">遇到问题?</span>
         </div>
       </div>
@@ -49,7 +49,7 @@
 
     <script type="text/html" id="tplBottom">
       <div class="login-bottom">
-        <img class="company-img" src="images/img_text_phone3.png">
+        <img class="company-img" src="images/img_text_phone.png">
       </div>
     </script>
 
