--- a/scenes/scenes.html
+++ b/scenes/scenes.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
-    <title>东莞无限</title>
+    <title>欢迎使用东莞无限免费WiFi</title>
   </head>
   <body>
     <div id="scenes"></div>
