--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -28,7 +28,8 @@
             <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
             <i class="query-code">获取验证码</i>
           </div>
-          <button class="btn mob-btn" type="button">开启智慧城市之旅</button>
+          <!--button class="btn mob-btn" type="button">开启智慧城市之旅</button-->
+          <button class="btn mob-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi</button>
           <span class="has-ques g-fr">遇到问题?</span>
         </div>
       </div>
