--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -29,8 +29,10 @@
             <i class="query-code">获取验证码</i>
           </div>
           <!--button class="btn mob-btn" type="button">开启智慧城市之旅</button-->
-          <button class="btn mob-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi</button>
-          <span class="has-ques g-fr">遇到问题?</span>
+          <div class="input-main g-clearfix">
+            <button class="btn mob-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi</button>
+            <span class="has-ques g-fr">遇到问题?</span>
+          </div>
         </div>
       </div>
     </script>
@@ -41,7 +43,7 @@
           <img class="login-top-bg" src="{{img || 'images/img_bg.png'}}">
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
-        <div class="input-main">
+        <div class="input-main g-clearfix">
           <button class="btn wx-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi</button>
           <span class="has-ques g-fr">遇到问题?</span>
         </div>
