--- a/vue2x/wx/h5/wxpostlogin.html
+++ b/vue2x/wx/h5/wxpostlogin.html
@@ -13,7 +13,9 @@
       html,body {
         width: 100%;
         height: 100%;
+        max-width: 750px;
         overflow: hidden;
+        margin:  0 auto;
       }
 
       .login {
@@ -21,7 +23,7 @@
         height: 100%;
         position: relative;
       }
-      .content {
+      /* .content {
         width: 100%;
         position: absolute;
         top: 50%;
@@ -33,21 +35,18 @@
         font-size: 14px;
         width: 100%;
         display: block;
-      }
+      }*/
       img {
-        width: 200px;
-        height: 200px;
+        width: 100%;
+        height: auto;
         display: block; 
         margin: 0 auto;
-      }
+      } 
     </style>
   </head>
   <body>
     <div class="login">
-      <div class="content">
-        <p class="text">为保证您能正常使用WiFi，请关注我们的公众号</p>
-        <img src="image/dgfree430.jpg">
-      </div>
+      <img src="http://img.yunxingzh.com/4470bf79-f91f-4970-8e04-035bbdd5c399.png">
     </div>
     </script>
   </body>
