--- a/vue2x/wx/h5/test.html
+++ b/vue2x/wx/h5/test.html
@@ -31,8 +31,8 @@
   var oid = query().oid;
   if (oid) {
     alert(oid);
-  } else {
-    location.href = "http://mp.weixin.qq.com/s/yAFSlLy0qEQ4r2UpmCAp5g";
-  }
+  } 
+  alert(location.href);
+  location.href = "http://mp.weixin.qq.com/s/yAFSlLy0qEQ4r2UpmCAp5g";
   </script>
 </html>
