--- a/vue2x/wx/h5/zhuan.html
+++ b/vue2x/wx/h5/zhuan.html
@@ -25,18 +25,26 @@
       wxutil.bindShare({
           desc: param.desc,
           title: param.title,
-          link: param.url + '?oid=' + oid,
-          imgUrl: param.imgUrl,
+          link: param.link + '?oid=' + oid,
+          imgUrl: param.imgUrl || '',
           callback: function(type, res) {
               if (type === 'fail') {
                   alert(JSON.stringify(res));
               }
           }
       });
+      alert(param.desc + ' ' + param.title + ' ' + param.link);
     }
   }
+  function getData() {
+    bindShare({
+      desc: '推荐东莞无限的文章',
+      title: '东莞无限',
+      link: 'http://wx.yunxingzh.com/h5/test.html'
+    })
+  }
   $(function(){
-    wxutil.init();
+    wxutil.init(getData);
     $('#content').attr('src', url);
     // CGI.get('get_forward', {}, function(resp) {
     //   if (resp.errno == 0) {
@@ -45,11 +53,6 @@
     //     console.log(resp.desc);
     //   }
     // });
-    wxutil.bindShare({
-      desc: '推荐东莞无限的文章',
-      title: '东莞无限',
-      link: 'http://wx.yunxingzh.com/wx/h5/test.html'
-    })
   });
   </script>
 </html>
