--- a/vue2x/wx/h5/wxpostlogin.html
+++ b/vue2x/wx/h5/wxpostlogin.html
@@ -26,12 +26,15 @@
         position: absolute;
         top: 50%;
         left: 50%;
+        transform: translate(-50%, -50%);
         -webkit-transform: translate(-50%, -50%);
+
       }
       .text {
         text-align: center;
         font-size: 14px;
         width: 100%;
+        padding: 6px;
         display: block;
       }
       img {
