--- a/vue2x/wx/chatcat/accept.html
+++ b/vue2x/wx/chatcat/accept.html
@@ -9,44 +9,77 @@
 </head>
 <body>
   <div class="accept-info">
-    <img class="img-logo" src="images/H5_logo.png">
-    <div class="code-info">
-      <p class="code-tit code-line g-tac">好友邀请码</p>
-      <p class="code-val code-line g-tac">XH8767E</p>
-      <p class="code-obtain g-tac">长按复制</p>
+    <img class="img1" src="images/invite_img1.png">
+    <div class="accept-info-inner">
+      <p class="accept-info-invite g-tac">你的好友邀请你<br/>一起来玩Meecha</p>
+      <p class="g-tac accept-info-code">邀请码：XH67887</p>
+      <button class="accept-info-btn" data-clipboard-text="{{code}}">复制邀请码</button>
+      <div class="tip g-tac">复制成功！</div>
     </div>
-    <a class="down-ios g-tac" target="_blank" href="https://itunes.apple.com/app/id1157463038">ios下载</a>
-    <a class="down-android g-tac" argt="_blank" href="https://itunes.apple.com/app/id1157463038">android下载</a>
   </div>
-  <script type="text/javascript">
-    font();
-    function font() {
-      if (document && window) {
-        // init font
-      var docEl = document.documentElement;
-      var isIOS = navigator.userAgent.match(/iphone|ipod|ipad/gi);
-      var dpr = isIOS? Math.min(window.devicePixelRatio, 3) : 1;
-        dpr = window.top === window.self? dpr : 1; //被iframe引用时，禁止缩放
-      var scale = 1 / dpr;
-      var resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize';
-
-      docEl.dataset.dpr = dpr;
-      var metaEl = document.createElement('meta');
-      metaEl.name = 'viewport';
-      metaEl.content = 'initial-scale=1,maximum-scale=1, minimum-scale=1';
-      docEl.firstElementChild.appendChild(metaEl);
-      var recalc = function () {
-        var width = docEl.clientWidth;
-        if (width / dpr > 750) {
-          width = 750 * dpr;
-        }
-        docEl.style.fontSize = 100 * (width / 750) + 'px';
-      };
-      recalc();
-      if (!document.addEventListener) return;
-      window.addEventListener(resizeEvt, recalc, false);
-      }
-    }
-  </script>
+  <p class="accept-text1 g-tac">也许，你并不是孤身一人</p>
+  <p class="accept-text2 g-tac">找到身边的朋友，发现身边的新鲜事<br/>相约志同道合的朋友一起玩乐</p>
+  <img src="images/invite_img2.png">
+  <img src="images/invite_img3.png">
+  <div class="down-load g-clearfix">
+    <dl class="g-fl down-info">
+      <dt class="g-fl"><img src="images/invite_logo.png"></dt>
+      <dd class="g-fl">
+        <img class="logo-text" src="images/invite_logo_word.png">
+        <p class="down-text">遇见附近的人</p>
+      </dd>
+    </dl>
+    <a class="g-fr down-url g-tac" href="https://itunes.apple.com/app/id1157463038" target="_blank">下载App</a>
+  </div>
 </body>
+<script src="js/jquery.min.js" ></script>
+<script src="js/clipboard.min.js"></script>
+<script type="text/javascript">
+  $(function(){
+    adapt();
+    initUI();
+  })
+  function adapt() {
+    if (document && window) {
+      // init font
+    var docEl = document.documentElement;
+    var isIOS = navigator.userAgent.match(/iphone|ipod|ipad/gi);
+    var dpr = isIOS? Math.min(window.devicePixelRatio, 3) : 1;
+      dpr = window.top === window.self? dpr : 1; //被iframe引用时，禁止缩放
+    var scale = 1 / dpr;
+    var resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize';
+
+    docEl.dataset.dpr = dpr;
+    var metaEl = document.createElement('meta');
+    metaEl.name = 'viewport';
+    metaEl.content = 'initial-scale=1,maximum-scale=1, minimum-scale=1';
+    docEl.firstElementChild.appendChild(metaEl);
+    var recalc = function () {
+      var width = docEl.clientWidth;
+      if (width / dpr > 750) {
+        width = 750 * dpr;
+      }
+      docEl.style.fontSize = 100 * (width / 750) + 'px';
+    };
+    recalc();
+    if (!document.addEventListener) return;
+    window.addEventListener(resizeEvt, recalc, false);
+    }
+  }
+  function initUI() {
+    var clipboard = new Clipboard('.accept-info-btn');
+    clipboard.on('success', function(e) {
+      e.clearSelection();
+      $('.tip').show();
+      setTimeout(function() { $('.tip').hide()}, 1000);
+    });
+    // 修改下载地址
+    var ua = navigator.userAgent.toLowerCase();
+    if (/iphone|ipad|ipod/.test(ua)) {
+      $('.down-url').attr('href', "https://itunes.apple.com/app/id1157463038");
+    } else if (/android/.test(ua)) {
+      $('.down-url').attr('href', "https://play.google.com/store/apps/details?id=me.meecha");
+    }
+  }
+</script>
 </html>
