--- a/liaomao/share/share.html
+++ b/liaomao/share/share.html
@@ -12,7 +12,7 @@
     
   </ul> 
   <script type="text/html" id="tplInfo">
-  {{each list as value i}}
+  {{each list value i}}
       <li class="contain-inner">
         {{value.text}}
         <img class="inner-img" src="{{value.img}}" alt="">
