--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -153,6 +153,7 @@
     <script type="text/html" id="tplCover">
       <div class="con-cover">
         <img class="tao-cover" src="{{cover}}">
+        <div class="tao-link"><span class="time-count" id="count">3</span><span class="g-fr">通过</span></div>
       </div>
     </script>
     <script type="text/html" id="apple">
