--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -46,7 +46,7 @@
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main g-clearfix">
-          <button class="btn wx-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi</button>
+          <button class="btn wx-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi<span id="btn-login"></span></button>
           <span class="has-ques g-fr">遇到问题?</span>
         </div>
       </div>
